tests/snapshots/snapshot_tests__array_tiling_pr2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_pr2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!9 5 Z) Z) (Read-Int-Int Array-Int-Int!val!9 Z))",
    ],
}
