tests/snapshots/snapshot_tests__array_tiling_pr4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tiling_pr4.vmt",
    status: Panic,
    used_instantiations: [],
}
