tests/snapshots/snapshot_tests__array_tiling_pr5.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_pr5.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!11 9 val1) val4_next) (Read-Int-Int Array-Int-Int!val!11 val4_next))",
    ],
}
